katars/tests/snaps/snapshots/snap_errors__deeply_nested_undefined.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"print(1 + foo * 2)\")"
---
Error: undefined variable 'foo'
   ╭─[<test>:1:11]
   │
 1 │ print(1 + foo * 2)
   │           ─┬─  
   │            ╰─── undefined variable 'foo'
───╯
